--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
           retention-days: 7
 
       # Дешёвый smoke-тест чтения (если есть адрес и RPC)
-      - name: Smoke: read SimpleStorage (optional)
+      - name: "Smoke: read SimpleStorage (optional)"
         if: ${{ env.SIMPLE_STORAGE != '' && secrets.CIRCLE_RPC_URL != '' }}
         env:
           CIRCLE_RPC_URL: ${{ secrets.CIRCLE_RPC_URL }}
