--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       SIMPLE_STORAGE: ${{ vars.SIMPLE_STORAGE }}
-      CIRCLE_RPC_URL: ${{ secrets.CIRCLE_RPC_URL }}   # поднимаем секрет на уровень job
+      CIRCLE_RPC_URL: ${{ secrets.CIRCLE_RPC_URL }}
 
     steps:
       - name: Checkout
@@ -28,6 +28,8 @@ jobs:
           cache: npm
 
       - name: Install deps (Linux-safe, omit optional)
+        env:
+          NPM_CONFIG_OPTIONAL: "false"   # ключ: полностью отключаем optional
         run: |
           set -e
           npm ci --omit=optional
@@ -51,7 +53,7 @@ jobs:
           ls -la deployments || true >> $GITHUB_STEP_SUMMARY
           ls -la artifacts/contracts/SimpleStorage.sol || true >> $GITHUB_STEP_SUMMARY
 
-      # Загружаем ABI – всегда должен быть
+      # Загружаем ABI — всегда должен быть
       - name: Upload ABI
         uses: actions/upload-artifact@v4
         with:
@@ -60,7 +62,7 @@ jobs:
           if-no-files-found: error
           retention-days: 7
 
-      # Остальное – опционально в CI (деплой не выполняется)
+      # Остальное — опционально в CI (деплой не выполняется)
       - name: Upload deployment JSON (optional)
         uses: actions/upload-artifact@v4
         with:
