--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
 # dependencies
 node_modules/
 
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
 # secrets
 .env
+.env.*
+!.env.example
+.env(old)
 
 # hardhat
 artifacts/
@@ -15,5 +25,7 @@ build/
 coverage/
 typechain/
 
-# local variants
-.env(old)
+# OS/editor junk
+.DS_Store
+Thumbs.db
+*.swp
