--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,14 @@
-﻿# Пример, значения замените локально в .env
-PRIVATE_KEY=0x..............................................................
+# Пример, значения замените локально в .env (в git не коммитить)
+
+# RPC-эндпоинт Circle Layer Testnet
+CIRCLE_RPC_URL=
+
+# Chain ID (число, пример: 34443 — поставь фактический)
+CHAIN_ID=
+
+# Приватный ключ деплойера (формат 0x..., без кавычек)
+PRIVATE_KEY=
+
+# Опционально: адреса уже задеплоенных контрактов, если используете скрипты чтения
 SIMPLE_STORAGE=0x0000000000000000000000000000000000000000
 TRUFFLE_SIMPLE_STORAGE=0x0000000000000000000000000000000000000000
