--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
     env:
       SIMPLE_STORAGE: ${{ vars.SIMPLE_STORAGE }}
       CIRCLE_RPC_URL: ${{ secrets.CIRCLE_RPC_URL }}
+      CHAIN_ID: ${{ vars.CHAIN_ID }}
+      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
 
     steps:
       - name: Checkout
@@ -26,6 +28,11 @@ jobs:
         with:
           node-version: 20
           cache: npm
+
+      - name: Show versions
+        run: |
+          node -v
+          npm -v
 
       - name: Install deps (Linux-safe, omit optional)
         shell: bash
@@ -45,18 +52,42 @@ jobs:
           npm prune --omit=optional
           npm ls fsevents || true
 
-      # <<< изменённый шаг: ставим анализатор под Linux без условий и компилим с трейсом
-      - name: Ensure analyzer (Linux) & Compile
+      - name: Ensure Hardhat toolchain (Linux analyzer + TypeChain if needed)
         shell: bash
         run: |
           set -e
+          # Всегда ставим Linux-анализатор для hardhat-toolbox
           npm i -D @nomicfoundation/solidity-analyzer-linux-x64-gnu
-          echo "----- hardhat.config.js -----"
-          if [ -f hardhat.config.js ]; then cat hardhat.config.js; fi
-          echo "-----------------------------"
+          # Если в конфиге включён TypeChain — доставим плагины
+          if grep -q "@typechain/hardhat" hardhat.config.* 2>/dev/null; then
+            echo "TypeChain detected in hardhat.config — installing devDeps…"
+            npm i -D @typechain/hardhat typechain @typechain/ethers-v6
+            # Если конфиг на TypeScript — поставим TS тулчейн
+            if [ -f tsconfig.json ] || grep -q "hardhat.config.ts" <<< "$(ls -1 2>/dev/null)"; then
+              npm i -D typescript ts-node
+            fi
+          fi
+
+      - name: Print project tree
+        run: |
+          echo "### contracts/"
+          ls -la contracts || true
+          echo "### hardhat.config.*"
+          ls -la hardhat.config.* || true
+          echo "### package.json"
+          cat package.json
+
+      - name: Compile (verbose)
+        shell: bash
+        run: |
+          set -e
+          echo "----- hardhat.config (preview) -----"
+          if [ -f hardhat.config.js ]; then sed -n '1,160p' hardhat.config.js; fi
+          if [ -f hardhat.config.ts ]; then sed -n '1,160p' hardhat.config.ts; fi
+          echo "------------------------------------"
           npx hardhat clean
+          # Максимально подробный вывод трассы
           npx hardhat compile --show-stack-traces
-      # >>>
 
       - name: Export ABI for artifacts
         run: node scripts/exportAbi.js
