--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,11 +40,11 @@ jobs:
           NPM_CONFIG_OPTIONAL: "false"
         run: |
           set -e
-          # Устанавливаем зависимости. Если падение из-за EBADPLATFORM (fsevents на Linux) — продолжаем.
-          npm ci --omit=optional || {
-            echo "::warning::npm ci failed, checking for EBADPLATFORM in npm debug log…"
-            if grep -q 'EBADPLATFORM' /home/runner/.npm/_logs/*-debug-0.log; then
-              echo "::notice::Detected EBADPLATFORM for fsevents on Linux — ignoring and continuing."
+          # Устанавливаем зависимости. Если падение из-за EBADPLATFORM (fsevents на Linux) — игнорируем и продолжаем.
+          npm ci --omit=optional --no-optional || {
+            echo "::warning::npm ci failed, checking for EBADPLATFORM in npm logs…"
+            if grep -Eiq 'EBADPLATFORM|Unsupported platform.*fsevents' /home/runner/.npm/_logs/*-debug-*.log; then
+              echo "::notice::Ignoring EBADPLATFORM for fsevents on Linux and continuing."
             else
               echo "::error::npm ci failed for a different reason."; exit 1
             fi
@@ -58,12 +58,11 @@ jobs:
           set -e
           # Всегда ставим Linux-анализатор для hardhat-toolbox
           npm i -D @nomicfoundation/solidity-analyzer-linux-x64-gnu
-          # Если в конфиге включён TypeChain — доставим плагины
+          # Если в конфиге подключён TypeChain — доставим плагины, чтобы compile не падал
           if grep -q "@typechain/hardhat" hardhat.config.* 2>/dev/null; then
             echo "TypeChain detected in hardhat.config — installing devDeps…"
             npm i -D @typechain/hardhat typechain @typechain/ethers-v6
-            # Если конфиг на TypeScript — поставим TS тулчейн
-            if [ -f tsconfig.json ] || grep -q "hardhat.config.ts" <<< "$(ls -1 2>/dev/null)"; then
+            if [ -f tsconfig.json ] || [ -f hardhat.config.ts ]; then
               npm i -D typescript ts-node
             fi
           fi
@@ -81,12 +80,11 @@ jobs:
         shell: bash
         run: |
           set -e
-          echo "----- hardhat.config (preview) -----"
-          if [ -f hardhat.config.js ]; then sed -n '1,160p' hardhat.config.js; fi
-          if [ -f hardhat.config.ts ]; then sed -n '1,160p' hardhat.config.ts; fi
-          echo "------------------------------------"
+          echo "----- hardhat.config preview -----"
+          [ -f hardhat.config.js ] && sed -n '1,200p' hardhat.config.js || true
+          [ -f hardhat.config.ts ] && sed -n '1,200p' hardhat.config.ts || true
+          echo "----------------------------------"
           npx hardhat clean
-          # Максимально подробный вывод трассы
           npx hardhat compile --show-stack-traces
 
       - name: Export ABI for artifacts
