--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
           NPM_CONFIG_OPTIONAL: "false"
         run: |
           set -e
-          # Ставим зависимости. Если падение из-за EBADPLATFORM (fsevents на Linux) — пропускаем и идём дальше.
+          # Ставим зависимости. Если падение из-за EBADPLATFORM (fsevents на Linux) — игнорируем и идём дальше.
           npm ci --omit=optional --no-optional || {
             echo "::warning::npm ci failed, checking for EBADPLATFORM in npm logs…"
             if grep -Eiq 'EBADPLATFORM|Unsupported platform.*fsevents' /home/runner/.npm/_logs/*-debug-*.log; then
@@ -52,27 +52,40 @@ jobs:
           npm prune --omit=optional
           npm ls fsevents || true
 
-      - name: Verify Hardhat config has NO TypeChain
+      - name: "Sanitize Hardhat config (remove TypeChain if present)"
         shell: bash
         run: |
           set -e
           CFG=""
           [ -f hardhat.config.js ] && CFG="hardhat.config.js"
           [ -z "$CFG" ] && [ -f hardhat.config.ts ] && CFG="hardhat.config.ts"
+
           if [ -z "$CFG" ]; then
-            echo "::warning::No hardhat.config.js/ts found — skipping TypeChain check."
+            echo "::notice::No hardhat.config.js/ts found — skipping sanitize."
             exit 0
           fi
-          if grep -Eq "@typechain/hardhat|typechain\s*:" "$CFG"; then
-            echo "::error::Remove '@typechain/hardhat' import/require and the 'typechain: { … }' block from $CFG, then re-run CI."
-            exit 1
-          fi
-          echo "OK: TypeChain is not referenced in $CFG"
+
+          cp "$CFG" "$CFG.bak"
+
+          # 1) Удаляем любые require/import '@typechain/hardhat' (в т.ч. закомментированные — безопасно)
+          sed -i '/@typechain\/hardhat/d' "$CFG" || true
+
+          # 2) Удаляем блок typechain: { … } вместе с лишними запятыми вокруг
+          #   - запятая перед блоком
+          perl -0777 -pe 's/\s*,\s*typechain\s*:\s*\{[^{}]*\}\s*/\n/gs' -i "$CFG" 2>/dev/null || true
+          #   - запятая после блока
+          perl -0777 -pe 's/\s*typechain\s*:\s*\{[^{}]*\}\s*,\s*/\n/gs' -i "$CFG" 2>/dev/null || true
+          #   - блок без соседних запятых
+          perl -0777 -pe 's/\s*typechain\s*:\s*\{[^{}]*\}\s*/\n/gs' -i "$CFG" 2>/dev/null || true
+
+          echo "----- Diff after sanitize ($CFG) -----"
+          diff -u "$CFG.bak" "$CFG" || true
+          echo "--------------------------------------"
 
       - name: Ensure Hardhat analyzer (Linux)
         run: npm i -D @nomicfoundation/solidity-analyzer-linux-x64-gnu
 
-      - name: Compile (verbose)
+      - name: "Compile (verbose)"
         shell: bash
         run: |
           set -e
