--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
           node -v
           npm -v
 
+      # Установка зависимостей с игнором EBADPLATFORM (fsevents на Linux)
       - name: Install deps (Linux-safe, omit optional)
         shell: bash
         env:
@@ -60,7 +61,7 @@ jobs:
           npm prune --omit=optional
           npm ls fsevents || true
 
-      # На раннере гарантируем наличие нужных devDeps
+      # Гарантируем нужные devDeps на раннере
       - name: Ensure Hardhat analyzer + dotenv
         run: npm i -D @nomicfoundation/solidity-analyzer-linux-x64-gnu dotenv
 
@@ -85,6 +86,34 @@ jobs:
           ls -la deployments || true >> $GITHUB_STEP_SUMMARY
           ls -la artifacts/contracts/SimpleStorage.sol || true >> $GITHUB_STEP_SUMMARY
 
+      # ====== ДЕПЛОЙ (ручной запуск) ======
+      - name: Deploy SimpleStorage (manual only)
+        if: ${{ github.event_name == 'workflow_dispatch' && env.PRIVATE_KEY != '' && env.CIRCLE_RPC_URL != '' }}
+        shell: bash
+        run: |
+          set -e
+          echo "Starting deploy..."
+          npx hardhat run --network circleLayerTestnet scripts/deploy.js | tee deploy.log
+
+          # Пытаемся вытащить адрес контракта из лога
+          ADDR=$(grep -Eo '0x[0-9a-fA-F]{40}' deploy.log | head -1 || true)
+          if [ -z "$ADDR" ]; then
+            echo "::error::Could not parse deployed address from deploy.log"
+            echo "---- deploy.log ----"
+            sed -n '1,200p' deploy.log || true
+            exit 1
+          fi
+
+          echo "SIMPLE_STORAGE=$ADDR" >> $GITHUB_ENV
+          echo "Deployed SimpleStorage: $ADDR" | tee -a $GITHUB_STEP_SUMMARY
+
+          # Сохраним JSON для артефактов
+          mkdir -p deployments/circleLayerTestnet
+          cat > deployments/circleLayerTestnet/SimpleStorage.json <<JSON
+          { "address": "$ADDR" }
+          JSON
+
+      # Артефакты
       - name: Upload ABI
         uses: actions/upload-artifact@v4
         with:
@@ -109,6 +138,7 @@ jobs:
           if-no-files-found: ignore
           retention-days: 7
 
+      # Smoke-чтение после деплоя (если адрес уже есть)
       - name: "Smoke: read SimpleStorage (optional)"
         if: ${{ env.SIMPLE_STORAGE != '' && env.CIRCLE_RPC_URL != '' }}
         run: npx hardhat run --network circleLayerTestnet scripts/read.js
