--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch: {}
+  workflow_dispatch: {}   # ручной запуск для деплоя
 
 permissions:
   contents: read
@@ -37,7 +37,7 @@ jobs:
           node -v
           npm -v
 
-      # Установка зависимостей с игнором EBADPLATFORM (fsevents на Linux)
+      # Установка зависимостей с жёстким игнором EBADPLATFORM (fsevents)
       - name: Install deps (Linux-safe, omit optional)
         shell: bash
         env:
@@ -61,7 +61,7 @@ jobs:
           npm prune --omit=optional
           npm ls fsevents || true
 
-      # Гарантируем нужные devDeps на раннере
+      # Гарантируем devDeps для компиляции
       - name: Ensure Hardhat analyzer + dotenv
         run: npm i -D @nomicfoundation/solidity-analyzer-linux-x64-gnu dotenv
 
@@ -86,34 +86,6 @@ jobs:
           ls -la deployments || true >> $GITHUB_STEP_SUMMARY
           ls -la artifacts/contracts/SimpleStorage.sol || true >> $GITHUB_STEP_SUMMARY
 
-      # ====== ДЕПЛОЙ (ручной запуск) ======
-      - name: Deploy SimpleStorage (manual only)
-        if: ${{ github.event_name == 'workflow_dispatch' && env.PRIVATE_KEY != '' && env.CIRCLE_RPC_URL != '' }}
-        shell: bash
-        run: |
-          set -e
-          echo "Starting deploy..."
-          npx hardhat run --network circleLayerTestnet scripts/deploy.js | tee deploy.log
-
-          # Пытаемся вытащить адрес контракта из лога
-          ADDR=$(grep -Eo '0x[0-9a-fA-F]{40}' deploy.log | head -1 || true)
-          if [ -z "$ADDR" ]; then
-            echo "::error::Could not parse deployed address from deploy.log"
-            echo "---- deploy.log ----"
-            sed -n '1,200p' deploy.log || true
-            exit 1
-          fi
-
-          echo "SIMPLE_STORAGE=$ADDR" >> $GITHUB_ENV
-          echo "Deployed SimpleStorage: $ADDR" | tee -a $GITHUB_STEP_SUMMARY
-
-          # Сохраним JSON для артефактов
-          mkdir -p deployments/circleLayerTestnet
-          cat > deployments/circleLayerTestnet/SimpleStorage.json <<JSON
-          { "address": "$ADDR" }
-          JSON
-
-      # Артефакты
       - name: Upload ABI
         uses: actions/upload-artifact@v4
         with:
@@ -138,7 +110,61 @@ jobs:
           if-no-files-found: ignore
           retention-days: 7
 
-      # Smoke-чтение после деплоя (если адрес уже есть)
-      - name: "Smoke: read SimpleStorage (optional)"
-        if: ${{ env.SIMPLE_STORAGE != '' && env.CIRCLE_RPC_URL != '' }}
+      # ---------- ПРЕФЛАЙТ ДЛЯ ДЕПЛОЯ ----------
+      - name: Preflight: validate secrets for deploy (manual only)
+        if: ${{ github.event_name == 'workflow_dispatch' }}
+        shell: bash
+        run: |
+          set -e
+          # CIRCLE_RPC_URL должен начинаться с http(s)://
+          if [ -z "${CIRCLE_RPC_URL:-}" ]; then
+            echo "::error::CIRCLE_RPC_URL secret is empty."; exit 1
+          fi
+          if ! echo "$CIRCLE_RPC_URL" | grep -Eq '^https?://'; then
+            echo "::error::CIRCLE_RPC_URL must start with http(s):// (got: masked value). Set a real RPC URL in repo Settings → Secrets."; exit 1
+          fi
+          # PRIVATE_KEY — 64 hex-символа, с префиксом 0x или без
+          if [ -z "${PRIVATE_KEY:-}" ]; then
+            echo "::error::PRIVATE_KEY secret is empty."; exit 1
+          fi
+          if ! echo "$PRIVATE_KEY" | grep -Eq '^(0x)?[0-9a-fA-F]{64}$'; then
+            echo "::error::PRIVATE_KEY must be 64 hex chars (with optional 0x)."; exit 1
+          fi
+          echo "All deploy secrets look OK."
+
+      # ---------- ДЕПЛОЙ (ручной запуск) ----------
+      - name: Deploy SimpleStorage (manual only)
+        if: ${{ github.event_name == 'workflow_dispatch' }}
+        id: deploy
+        shell: bash
+        run: |
+          set -e
+          echo "Starting deploy..."
+          ADDR=$(npx hardhat run --network circleLayerTestnet scripts/deploy.js | grep -Eoi '0x[a-fA-F0-9]{40}' | tail -1)
+          if [ -z "$ADDR" ]; then
+            echo "::error::Deploy script didn't print an address"; exit 1
+          fi
+          echo "address=$ADDR" >> $GITHUB_OUTPUT
+          echo "### Deployed SimpleStorage" >> $GITHUB_STEP_SUMMARY
+          echo "- Address: \`$ADDR\`" >> $GITHUB_STEP_SUMMARY
+          mkdir -p deployments/circleLayerTestnet
+          echo "{\"address\":\"$ADDR\"}" > deployments/circleLayerTestnet/SimpleStorage.address.json
+
+      - name: Upload deployed address (optional)
+        if: ${{ steps.deploy.outputs.address != '' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: deployed-address-${{ github.sha }}
+          path: deployments/circleLayerTestnet/SimpleStorage.address.json
+          if-no-files-found: error
+          retention-days: 7
+
+      # Смоук-чтение нового адреса (если деплоили)
+      - name: Smoke read freshly deployed (optional)
+        if: ${{ steps.deploy.outputs.address != '' }}
+        run: npx hardhat run --network circleLayerTestnet scripts/read.js ${{ steps.deploy.outputs.address }}
+
+      # Смоук-чтение старого адреса (если задан в vars)
+      - name: Smoke: read existing SimpleStorage (optional)
+        if: ${{ steps.deploy.outputs.address == '' && env.SIMPLE_STORAGE != '' && env.CIRCLE_RPC_URL != '' }}
         run: npx hardhat run --network circleLayerTestnet scripts/read.js
